2019-03-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (SetNexus): Cache resource limits in
	CacheInfo rather than repeatedly calling into the resource code in
	order to lessen the overhead of performing resource limit checks
	on the pixel cache views.

	* magick/resource.c (AcquireMagickResource): Use a lock for each
	resource in order to lessen contention.  Return a maximum 64-bit
	integer value if the resource has not been limited.  Previously
	returned -1 in this case but this was not documented.

2019-03-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/import.c (ImportViewPixelArea): If range between max and
	min is less than MagickEpsilon, produce a black image rather than
	throwing an exception.

	* coders/mat.c (ReadMATImage): Fix memory leak on unexpected end
	of file.  Fixes oss-fuzz 13556 "graphicsmagick/coder_MAT_fuzzer:
	Direct-leak in ReadMATImage". (Credit to OSS-Fuzz)

2019-03-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c (ReadMATImage): Quit if image scanlines are not
	fully populated due to exception.  Fixes oss-fuzz 13530
	"graphicsmagick/coder_MAT_fuzzer: Use-of-uninitialized-value in
	InsertComplexFloatRow". (Credit to OSS-Fuzz)

2019-03-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/txt.c (ReadTXTImage): Don't start new line if x_max <
	x_min.  Avoids calling SetImagePixels() with a width of zero.
	Related to oss-fuzz 13521 "graphicsmagick/coder_TEXT_fuzzer:
	Floating-point-exception in SetNexus". (Credit to OSS-Fuzz)

	* magick/pixel_cache.c (SetNexus): Report error for empty region
	rather than crashing due to divide by zero exception. This is a
	new bug due to yesterday's changes.  Fixes oss-fuzz 13521
	"graphicsmagick/coder_TEXT_fuzzer: Floating-point-exception in
	SetNexus". (Credit to OSS-Fuzz)

2019-03-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* design/pixel-cache.dot: Update design dot diagram to remove