@@ -38,6 +38,8 @@
 <p>2019-03-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/texture.c (ConstituteTextureImage): Acquire exclusive use
+of canvas image cache before entering OpenMP loop.</li>
 <li>magick/pixel_cache.c (SetNexus): Cache resource limits in
 CacheInfo rather than repeatedly calling into the resource code in
 order to lessen the overhead of performing resource limit checks
