@@ -1,5 +1,8 @@
 2019-03-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/texture.c (ConstituteTextureImage): Acquire exclusive use
+	of canvas image cache before entering OpenMP loop.
+
 	* magick/pixel_cache.c (SetNexus): Cache resource limits in
 	CacheInfo rather than repeatedly calling into the resource code in
 	order to lessen the overhead of performing resource limit checks
